swiper fixes, button, added custom scrollbar

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -15,10 +15,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   display: flex;
   flex-direction: column;
