--- a/src/css/link-button.css
+++ b/src/css/link-button.css
@@ -4,13 +4,6 @@
   align-items: center;
   width: 100%;
   height: 52px;
-  font-weight: 700;
-  line-height: 1.5;
-  color: var(--text-invert);
-  border-radius: 12px;
-  background-color: var(--green-50);
-  transition: var(--transition-base);
-  transition-property: background-color;
 }
 
 .link-button:hover,
@@ -22,6 +15,7 @@
   .link-button {
     font-size: 18px;
     line-height: 1.56;
+    padding: 0;
     height: 60px;
   }
 }
